--- a/index.html
+++ b/index.html
@@ -4,18 +4,168 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>index</title>
-    <script type="module" crossorigin src="/tryVite/assets/main-C-CX89_S.js"></script>
-    <link rel="stylesheet" crossorigin href="/tryVite/assets/main-D_ReleUK.css">
+    <script type="module" crossorigin src="/tryVite/assets/main-CmRESYv0.js"></script>
+    <link rel="stylesheet" crossorigin href="/tryVite/assets/main-CUJsEX4U.css">
   </head>
   <body>
-    <h1 class="header">header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
-    <h1 class="index-title">我是首頁</h1>
-    <img src="/tryVite/assets/dog-C9XCfHyE.jpg" style="width: 300px;" alt="cat">
+     <nav class="container py16 py-sm-12 df aic jcsb">
+        <ul class="df aic">
+            <li class="mr48">
+                <a href="index.html"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/c07852c7f1c21031d6380bb4398e2163f71122c9/2025-week1/logo.svg" alt="logo"></a>
+            </li>
+            <li class="mr40 d-sm-none"><a href="index.html" class="py12">商品列表</a></li>
+            <li class="d-sm-none"><a href="index2.html" class="py12">品牌故事</a></li>
+        </ul>
+        <a href="#" class="p12"><i class="bi bi-person"></i></a>
+    </nav>
+    <main class="container py32 py-md-16 mb48">
+        <nav class="mb24 mb-md-12">
+            <ol class="df">
+                <li><a href="index.html" class="text-neutral-600 text-md-sm">首頁</a></li>
+                <span class="line text-neutral-300">/</span>
+                <li><a href="#" class="text-neutral-600 text-md-sm">女鞋</a></li>
+                <span class="line text-neutral-300">/</span>
+                <li class="fw500 text-md-sm">所有商品</li>
+            </ol>
+        </nav>
+        <h1 class="h3 h4-md mb24 mb-md-12">所有商品</h1>
+        <div class="row">
+            <div class="col-2 d-md-none"> 
+                <nav>
+                    <ul>
+                        <li class="mb16"><a href="#" class="py8 text-primary-400">所有商品</a></li>
+                        <li class="mb16"><a href="#" class="py12">慢跑鞋</a></li>
+                        <li class="mb16"><a href="#" class="py12">滑板鞋</a></li>
+                        <li class="mb16"><a href="#" class="py12">厚底鞋</a></li>
+                        <li><a href="#" class="py12">限定 / 聯名企劃</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-10 col-md-4">
+                <div class="row">
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product.png?raw=true" alt="PLATFORM 404" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">PLATFORM 404</h2>
+                                <p>NT$2,600</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-1.png?raw=true" alt="PLATFORM 404" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">PLATFORM 404</h2>
+                                <p>NT$2,600</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-2.png?raw=true" alt="VM001" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">VM001</h2>
+                                <p>NT$2,600</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-3.png?raw=true" alt="Melty Kiss" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">Melty Kiss</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-4.png?raw=true" alt="BOOMBLOK" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">BOOMBLOK</h2>
+                                <p>NT$3,200</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-5.png?raw=true" alt="BOOMBLOK" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">BOOMBLOK</h2>
+                                <p>NT$3,200</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-6.png?raw=true" alt="R:UNER" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">R:UNER</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-7.png?raw=true" alt="Sugar Snap" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">Sugar Snap</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-32">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-8.png?raw=true" alt="Neofoam" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">Neofoam</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2 d-none d-md-block">
+                        <div class="mb48 mb-md-32">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-9.png?raw=true" alt="Buttermood" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">Buttermood</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <ul class="df jcc aic">
+                    <li class="mr12"><button type="button" class="btn btn-line" disabled=""><i class="bi bi-chevron-left"></i></button></li>
+                    <li class="mr8"><button type="button" class="btn page-btn page-btn-1 fw500">1</button></li>
+                    <li class="mr8"><button type="button" class="btn page-btn">2</button></li>
+                    <li class="mr8"><button type="button" class="btn page-btn">3</button></li>
+                    <li class="mr8 page-btn-point">...</li>
+                    <li class="mr12"><button type="button" class="btn page-btn-10">10</button></li>
+                    <li><button type="button" class="btn btn-line"><i class="bi bi-chevron-right"></i></button></li>
+                </ul>
+            </div>
+    </main>
 
-    <footer class="footer">footer</footer>
+    <div class="df jcc aic bg-primary-200 py24">
+        <p class="h4 h5-sm mr24 mr-sm-16">加入會員取得 9 折優惠</p>
+        <button type="button" class="btn dark-btn">馬上註冊</button>
+    </div>
+    <footer class="bg-neutral-100 py64 py-sm-32">
+        <div class="container">
+            <nav class="df jcsb aic d-sm-block mb24">
+                <a href="index.html" class="mb-sm-8"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/c07852c7f1c21031d6380bb4398e2163f71122c9/2025-week1/logo.svg" alt="logo"></a>
+                <ul class="df d-sm-block px-sm-12">
+                <li class="mr40 mr-sm-0 mb-sm-4"><a href="index.html" class="py12">商品列表</a></li>
+                <li><a href="index2.html" class="py12">品牌故事</a></li>
+                </ul>
+            </nav>
+            <div class="footer-text">
+                <p class="mb4">Copyright ©2025 URBNSTYLE</p>
+                <p>All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
