--- a/pages/index.html
+++ b/pages/index.html
@@ -4,13 +4,139 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>index</title>
   </head>
   <body>
     <%- include('./layout/header'); -%>
 
-    <h1 class="index-title">我是首頁</h1>
-    <img src="../assets/images/dog.jpg" style="width: 300px;" alt="cat">
+    <main class="container py32 py-md-16 mb48">
+        <nav class="mb24 mb-md-12">
+            <ol class="df">
+                <li><a href="index.html" class="text-neutral-600 text-md-sm">首頁</a></li>
+                <span class="line text-neutral-300">/</span>
+                <li><a href="#" class="text-neutral-600 text-md-sm">女鞋</a></li>
+                <span class="line text-neutral-300">/</span>
+                <li class="fw500 text-md-sm">所有商品</li>
+            </ol>
+        </nav>
+        <h1 class="h3 h4-md mb24 mb-md-12">所有商品</h1>
+        <div class="row">
+            <div class="col-2 d-md-none"> 
+                <nav>
+                    <ul>
+                        <li class="mb16"><a href="#" class="py8 text-primary-400">所有商品</a></li>
+                        <li class="mb16"><a href="#" class="py12">慢跑鞋</a></li>
+                        <li class="mb16"><a href="#" class="py12">滑板鞋</a></li>
+                        <li class="mb16"><a href="#" class="py12">厚底鞋</a></li>
+                        <li><a href="#" class="py12">限定 / 聯名企劃</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-10 col-md-4">
+                <div class="row">
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product.png?raw=true" alt="PLATFORM 404" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">PLATFORM 404</h2>
+                                <p>NT$2,600</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-1.png?raw=true" alt="PLATFORM 404" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">PLATFORM 404</h2>
+                                <p>NT$2,600</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-2.png?raw=true" alt="VM001" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">VM001</h2>
+                                <p>NT$2,600</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-3.png?raw=true" alt="Melty Kiss" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">Melty Kiss</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-4.png?raw=true" alt="BOOMBLOK" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">BOOMBLOK</h2>
+                                <p>NT$3,200</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-5.png?raw=true" alt="BOOMBLOK" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">BOOMBLOK</h2>
+                                <p>NT$3,200</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-6.png?raw=true" alt="R:UNER" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">R:UNER</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-24">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-7.png?raw=true" alt="Sugar Snap" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">Sugar Snap</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2">
+                        <div class="mb48 mb-md-32">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-8.png?raw=true" alt="Neofoam" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">Neofoam</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-4 col-md-2 d-none d-md-block">
+                        <div class="mb48 mb-md-32">
+                            <a href="index2.html">
+                                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-9.png?raw=true" alt="Buttermood" class="mb12 mb-md-8">
+                                <h2 class="h6 mb4 mb-md-0">Buttermood</h2>
+                                <p>NT$4,000</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <ul class="df jcc aic">
+                    <li class="mr12"><button type="button" class="btn btn-line" disabled=""><i class="bi bi-chevron-left"></i></button></li>
+                    <li class="mr8"><button type="button" class="btn page-btn page-btn-1 fw500">1</button></li>
+                    <li class="mr8"><button type="button" class="btn page-btn">2</button></li>
+                    <li class="mr8"><button type="button" class="btn page-btn">3</button></li>
+                    <li class="mr8 page-btn-point">...</li>
+                    <li class="mr12"><button type="button" class="btn page-btn-10">10</button></li>
+                    <li><button type="button" class="btn btn-line"><i class="bi bi-chevron-right"></i></button></li>
+                </ul>
+            </div>
+    </main>
 
     <%- include('./layout/footer'); -%>
 
