--- a/index2.html
+++ b/index2.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>index</title>
-  <script type="module" crossorigin src="/tryVite/assets/main-CmRESYv0.js"></script>
-  <link rel="stylesheet" crossorigin href="/tryVite/assets/main-CUJsEX4U.css">
-</head>
-<body>
+    <script type="module" crossorigin src="/tryVite/assets/main-CEnO7jOK.js"></script>
+    <link rel="stylesheet" crossorigin href="/tryVite/assets/main-CUJsEX4U.css">
+  </head>
+  <body>
      <nav class="container py16 py-sm-12 df aic jcsb">
         <ul class="df aic">
             <li class="mr48">
@@ -21,121 +25,229 @@
         <a href="#" class="p12"><i class="bi bi-person"></i></a>
     </nav>
     <main class="container">
-            <div class="row py64 py-md-0">
-                <div class="col-7 col-md-4">
-                    <div class="img-row">
-                        <div class="img-col mb8">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image.png?raw=true" alt="商品圖">
-                        </div>
-                        <div class="img-col mb8 d-md-none">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-1.png?raw=true" alt="商品圖">
-                        </div>
-                        <div class="img-col mb8 d-md-none">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-2.png?raw=true" alt="商品圖">
-                        </div>
-                        <div class="img-col mb8 d-md-none">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-3.png?raw=true" alt="商品圖">
-                        </div>
-                        <div class="img-col mb8 d-md-none">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-4.png?raw=true" alt="商品圖">
-                        </div>
-                        <div class="img-col mb8 d-md-none">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-5.png?raw=true" alt="商品圖">
-                        </div>
-                        <div class="img-col d-md-none">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-6.png?raw=true" alt="商品圖">
-                        </div>
-                        <div class="img-col d-md-none">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-7.png?raw=true" alt="商品圖">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-5  col-md-4">
-                    <nav class="mb12">
-                        <ol class="df">
-                            <li><a href="index.html" class="text-neutral-600 text-md-sm">首頁</a></li>
-                            <span class="line text-neutral-300">/</span>
-                            <li><a href="#" class="text-neutral-600 text-md-sm">女鞋</a></li>
-                            <span class="line text-neutral-300">/</span>
-                            <li><a href="#" class="text-neutral-600 text-md-sm">滑板鞋</a></li>
-                            <span class="line text-neutral-300">/</span>
-                            <li class="fw500 text-md-sm">Platform 404</li>
-                        </ol>
-                    </nav>
-                    <h1 class="h2 h4-md mb16 mb-md-12">Platform 404</h1>
-                    <p class="h5 h6-md text-primary-400 mb16 mb-md-12">NT$2,600<del class="del-text text-md-sm">NT$3,200</del></p>
-                    <p class="mb12">Platform 404 以柔和奶白為底，搭配深藍色皮革點綴，走在街上自帶回頭率。鞋型採用復古運動風輪廓，結合輕量厚底與柔軟泡棉鞋舌，兼顧美感與舒適。</p>
-                    <p class="mb32">鞋身選用柔軟皮革材質，打造出清新卻不失個性的氛圍，並以鞋面透氣孔設計提升穿著體驗，兼顧質感與舒適度，適合日常長時間著用。無論是街頭穿搭、日常通勤或週末出遊都能輕鬆駕馭。</p>
-                    <h3 class="mb8">顏色</h3>
-                    <div class="df mb32 mb-md-24">
-                        <div class="color-img">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image.png?raw=true" alt="藍色" class="mb4">
-                            <p>藍色</p>
-                        </div>
-                        <div class="color-img">
-                            <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-1.png?raw=true" alt="卡其色" class="mb4">
-                            <p>卡其色</p>
-                        </div>
-                    </div>
-                    <h3 class="mb8">尺寸</h3>
-                    <div class="df f-wrap gap8 mb8">
-                        <button type="button" class="btn size-btn use-btn">35(22.5cm)</button>
-                        <button type="button" class="btn size-btn">36(23.0cm)</button>
-                        <button type="button" class="btn size-btn">37(23.5cm)</button>
-                        <button type="button" class="btn size-btn">38(24.0cm)</button>
-                        <button type="button" class="btn size-btn">39(24.5cm)</button>
-                        <button type="button" class="btn size-btn">40(25.0cm)</button>
-                        <button type="button" class="btn size-btn">41(26.0cm)</button>
-                        <button type="button" class="btn size-btn" disabled>42(26.5cm)</button>
-                        <button type="button" class="btn size-btn" disabled>43(27.0cm)</button>
-                    </div>
-                    <p class="text-dange-300 mb48 mb-md-24">僅剩 3 雙</p>
-                    <div class="df mb32">
-                        <button type="button" class="btn light-btn mr8 w50 d-md-none"><i class="bi bi-heart mr8"></i>加入收藏</button>
-                        <button type="button" class="btn dark-btn w50 mr8"><i class="bi bi-handbag mr8"></i>門市預約試穿</button>
-                        <button type="button" class="d-none d-md-block heart-btn"><i class="bi bi-heart p12"></i></button>
-                    </div>
-                    <div class="py12 item">
-                        <h3 class="mb4 fw500">商品材質</h3>
-                        <p>鞋面：合成皮革（Synthetic Leather）</p>
-                        <p>內裡：透氣網布材質，提升舒適與排汗性</p>
-                        <p>鞋底：EVA 輕量發泡橡膠，具備良好緩震與止滑效果</p>
-                        <p>鞋帶：聚酯纖維，耐拉扯不易鬆脫</p>
-                    </div>
-                    <div class="py12 item">
-                        <h3 class="mb4 fw500">購買須知</h3>
-                        <p>商品顏色因螢幕顯示可能略有差異，請以實品為準。</p>
-                        <p>建議首次穿著前試穿確認尺寸，避免影響退換貨權益。</p>
-                        <p>本商品為限量發售，庫存有限，如需更換尺寸請儘早聯繫客服協助處理。</p>
-                    </div>
-                    <div class="py12 item">
-                        <h3 class="mb4 fw500">保養方式</h3>
-                        <p>建議以乾布或微濕軟布擦拭表面汙漬，避免機洗或長時間浸水。</p>
-                        <p>收納時請放置於乾燥通風處，避免日曬及高溫導致變形或龜裂。</p>
-                        <p>若需深層清潔，建議使用中性清潔劑並搭配柔刷輕刷，勿使用漂白水或強酸強鹼清潔劑。</p>
-                    </div>
-                </div>
+      <div class="row py64 py-md-0">
+        <div class="col-7 col-md-4">
+          <div class="img-row">
+            <div class="img-col mb8">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image.png?raw=true"
+                alt="商品圖"
+              />
             </div>
-            <div class="py48 py-md-40 mb40 mb-md-24">
-                <h2 class="h4 h5-md mb16">你可能也喜歡...</h2>
-                <div class="row f-md-nowrap overflow-x-md-auto card-md-row">
-                    <div class="col-3 card-md-col">
-                        <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-2.png?raw=true" alt="VM001" class="mb12">
-                        <h4 class="h6 mb4">VM001</h4><p>NT$2,600</p></a>
-                    </div>
-                    <div class="col-3 card-md-col">
-                        <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-3.png?raw=true" alt="Melty Kiss" class="mb12"><h4 class="h6 mb4">Melty Kiss</h4><p>NT$4,000</p></a>
-                    </div>
-                    <div class="col-3 card-md-col">
-                        <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-4.png?raw=true" alt="BOOMBLOK" class="mb12"><h4 class="h6 mb4">BOOMBLOK</h4><p>NT$3,200</p></a>
-                    </div>
-                    <div class="col-3 card-md-col">
-                        <a href="#"><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-7.png?raw=true" alt="Sugar Snap" class="mb12"><h4 class="h6 mb4">Sugar Snap</h4><p>NT$3,200</p></a>
-                    </div>
-                </div>
+            <div class="img-col mb8 d-md-none">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-1.png?raw=true"
+                alt="商品圖"
+              />
             </div>
+            <div class="img-col mb8 d-md-none">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-2.png?raw=true"
+                alt="商品圖"
+              />
+            </div>
+            <div class="img-col mb8 d-md-none">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-3.png?raw=true"
+                alt="商品圖"
+              />
+            </div>
+            <div class="img-col mb8 d-md-none">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-4.png?raw=true"
+                alt="商品圖"
+              />
+            </div>
+            <div class="img-col mb8 d-md-none">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-5.png?raw=true"
+                alt="商品圖"
+              />
+            </div>
+            <div class="img-col d-md-none">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-6.png?raw=true"
+                alt="商品圖"
+              />
+            </div>
+            <div class="img-col d-md-none">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image-7.png?raw=true"
+                alt="商品圖"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="col-5 col-md-4">
+          <nav class="mb12">
+            <ol class="df">
+              <li>
+                <a href="index.html" class="text-neutral-600 text-md-sm"
+                  >首頁</a
+                >
+              </li>
+              <span class="line text-neutral-300">/</span>
+              <li><a href="#" class="text-neutral-600 text-md-sm">女鞋</a></li>
+              <span class="line text-neutral-300">/</span>
+              <li>
+                <a href="#" class="text-neutral-600 text-md-sm">滑板鞋</a>
+              </li>
+              <span class="line text-neutral-300">/</span>
+              <li class="fw500 text-md-sm">Platform 404</li>
+            </ol>
+          </nav>
+          <h1 class="h2 h4-md mb16 mb-md-12">Platform 404</h1>
+          <p class="h5 h6-md text-primary-400 mb16 mb-md-12">
+            NT$2,600<del class="del-text text-md-sm">NT$3,200</del>
+          </p>
+          <p class="mb12">
+            Platform 404
+            以柔和奶白為底，搭配深藍色皮革點綴，走在街上自帶回頭率。鞋型採用復古運動風輪廓，結合輕量厚底與柔軟泡棉鞋舌，兼顧美感與舒適。
+          </p>
+          <p class="mb32">
+            鞋身選用柔軟皮革材質，打造出清新卻不失個性的氛圍，並以鞋面透氣孔設計提升穿著體驗，兼顧質感與舒適度，適合日常長時間著用。無論是街頭穿搭、日常通勤或週末出遊都能輕鬆駕馭。
+          </p>
+          <h3 class="mb8">顏色</h3>
+          <div class="df mb32 mb-md-24">
+            <div class="color-img">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/image.png?raw=true"
+                alt="藍色"
+                class="mb4"
+              />
+              <p>藍色</p>
+            </div>
+            <div class="color-img">
+              <img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-1.png?raw=true"
+                alt="卡其色"
+                class="mb4"
+              />
+              <p>卡其色</p>
+            </div>
+          </div>
+          <h3 class="mb8">尺寸</h3>
+          <div class="df f-wrap gap8 mb8">
+            <button type="button" class="btn size-btn use-btn">
+              35(22.5cm)
+            </button>
+            <button type="button" class="btn size-btn">36(23.0cm)</button>
+            <button type="button" class="btn size-btn">37(23.5cm)</button>
+            <button type="button" class="btn size-btn">38(24.0cm)</button>
+            <button type="button" class="btn size-btn">39(24.5cm)</button>
+            <button type="button" class="btn size-btn">40(25.0cm)</button>
+            <button type="button" class="btn size-btn">41(26.0cm)</button>
+            <button type="button" class="btn size-btn" disabled>
+              42(26.5cm)
+            </button>
+            <button type="button" class="btn size-btn" disabled>
+              43(27.0cm)
+            </button>
+          </div>
+          <p class="text-dange-300 mb48 mb-md-24">僅剩 3 雙</p>
+          <div class="df mb32">
+            <button type="button" class="btn light-btn mr8 w50 d-md-none">
+              <i class="bi bi-heart mr8"></i>加入收藏
+            </button>
+            <button type="button" class="btn dark-btn w50 mr8">
+              <i class="bi bi-handbag mr8"></i>門市預約試穿
+            </button>
+            <button type="button" class="d-none d-md-block heart-btn">
+              <i class="bi bi-heart p12"></i>
+            </button>
+          </div>
+          <div class="py12 item">
+            <h3 class="mb4 fw500">商品材質</h3>
+            <p>鞋面：合成皮革（Synthetic Leather）</p>
+            <p>內裡：透氣網布材質，提升舒適與排汗性</p>
+            <p>鞋底：EVA 輕量發泡橡膠，具備良好緩震與止滑效果</p>
+            <p>鞋帶：聚酯纖維，耐拉扯不易鬆脫</p>
+          </div>
+          <div class="py12 item">
+            <h3 class="mb4 fw500">購買須知</h3>
+            <p>商品顏色因螢幕顯示可能略有差異，請以實品為準。</p>
+            <p>建議首次穿著前試穿確認尺寸，避免影響退換貨權益。</p>
+            <p>
+              本商品為限量發售，庫存有限，如需更換尺寸請儘早聯繫客服協助處理。
+            </p>
+          </div>
+          <div class="py12 item">
+            <h3 class="mb4 fw500">保養方式</h3>
+            <p>建議以乾布或微濕軟布擦拭表面汙漬，避免機洗或長時間浸水。</p>
+            <p>收納時請放置於乾燥通風處，避免日曬及高溫導致變形或龜裂。</p>
+            <p>
+              若需深層清潔，建議使用中性清潔劑並搭配柔刷輕刷，勿使用漂白水或強酸強鹼清潔劑。
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="py48 py-md-40 mb40 mb-md-24">
+        <h2 class="h4 h5-md mb16">你可能也喜歡...</h2>
+        <div class="row f-md-nowrap overflow-x-md-auto card-md-row">
+          <div
+            class="col-3 card-md-col"
+            data-aos="zoom-in"
+            data-aos-delay="100"
+          >
+            <a href="#"
+              ><img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-2.png?raw=true"
+                alt="VM001"
+                class="mb12"
+              />
+              <h4 class="h6 mb4">VM001</h4>
+              <p>NT$2,600</p></a
+            >
+          </div>
+          <div
+            class="col-3 card-md-col"
+            data-aos="zoom-in"
+            data-aos-delay="200"
+          >
+            <a href="#"
+              ><img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-3.png?raw=true"
+                alt="Melty Kiss"
+                class="mb12"
+              />
+              <h4 class="h6 mb4">Melty Kiss</h4>
+              <p>NT$4,000</p></a
+            >
+          </div>
+          <div
+            class="col-3 card-md-col"
+            data-aos="zoom-in"
+            data-aos-delay="300"
+          >
+            <a href="#"
+              ><img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-4.png?raw=true"
+                alt="BOOMBLOK"
+                class="mb12"
+              />
+              <h4 class="h6 mb4">BOOMBLOK</h4>
+              <p>NT$3,200</p></a
+            >
+          </div>
+          <div
+            class="col-3 card-md-col"
+            data-aos="zoom-in"
+            data-aos-delay="400"
+          >
+            <a href="#"
+              ><img
+                src="https://github.com/hexschool/2022-web-layout-training/blob/main/2025-week2/product-7.png?raw=true"
+                alt="Sugar Snap"
+                class="mb12"
+              />
+              <h4 class="h6 mb4">Sugar Snap</h4>
+              <p>NT$3,200</p></a
+            >
+          </div>
+        </div>
+      </div>
     </main>
-    
+
     <div class="df jcc aic bg-primary-200 py24">
         <p class="h4 h5-sm mr24 mr-sm-16">加入會員取得 9 折優惠</p>
         <button type="button" class="btn dark-btn">馬上註冊</button>
@@ -155,5 +267,6 @@
             </div>
         </div>
     </footer>
-</body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  </body>
 </html>
